# Controller/file.upload.controller.js
@@ -1,34 +1,100 @@
-const multer = require("multer");
-const path = require("path");
-module.exports = function fileUploader(req, res, next) {
+const multer = require("multer")
+const path = require("path")
+const fs = require("fs")
+const BooksModel = require("../Schemas/books.schema")
+const AuthorsModel = require("../Schemas/authors.schema");
+
+async function uploadBookImage(req, res, next) {
   try {
+    const bookId = req.params.bookId;
+    const uploadsDir = path.join(__dirname, "../uploads");
+    if (!fs.existsSync(uploadsDir)) {
+      fs.mkdirSync(uploadsDir);
+    }
     const storage = multer.diskStorage({
       destination: (req, file, cb) => {
-        cb(null, path.join(__dirname, "../uploads"));
+        cb(null, uploadsDir);
       },
       filename: (req, file, cb) => {
         const fileNewName = `${Date.now()}-${Math.random().toString(36).substr(2, 9)}${path.extname(file.originalname)}`;
-        cb(null, fileNewName); 
+        cb(null, fileNewName);
       },
     });
     const upload = multer({ storage: storage });
-    upload.single("picture")(req, res, (err) => {
+    upload.single("picture")(req, res, async (err) => {
       if (err) {
         return res.status(400).json({ message: "Rasm yuklanmadi, iltimos rasmni yuklang!" });
       }
+
       if (!req.file) {
         return res.status(400).json({ message: "Rasm yuklanmadi, iltimos rasmni yuklang!" });
       }
-      const fileInfo = {
-        fileName: req.file.filename,
-        link: `${req.protocol}://${req.get("host")}/${req.file.filename}`,
-      };
-      res.status(201).json({
-        message: "Rasm muvaffaqiyatli yuklandi",
-        file: fileInfo,
+      const imgUrl = `${req.protocol}://${req.get("host")}/${req.file.filename}`;
+      const book = await BooksModel.findByIdAndUpdate(bookId, {
+        img: imgUrl,
+      });
+      if (!book) {
+        return res.status(404).json({ message: "Kitob topilmadi!" });
+      }
+      res.status(200).json({
+        message: "Rasm muvaffaqiyatli yuklandi!",
+        img: {
+          fileName: req.file.filename,
+          link: imgUrl,
+        },
       });
     });
   } catch (error) {
     next(error);
   }
-};
+}
+
+async function uploadAuthorImage(req, res, next) {
+  try {
+    const authorId = req.params.authorId;
+    const uploadsDir = path.join(__dirname, "../uploads");
+    if (!fs.existsSync(uploadsDir)) {
+      fs.mkdirSync(uploadsDir);
+    }
+    const storage = multer.diskStorage({
+      destination: (req, file, cb) => {
+        cb(null, uploadsDir);
+      },
+      filename: (req, file, cb) => {
+        const fileNewName = `${Date.now()}-${Math.random().toString(36).substr(2, 9)}${path.extname(file.originalname)}`;
+        cb(null, fileNewName);
+      },
+    });
+    const upload = multer({ storage: storage });
+    upload.single("picture")(req, res, async (err) => {
+      if (err) {
+        return res.status(400).json({ message: "Rasm yuklanmadi, iltimos rasmni yuklang!" });
+      }
+
+      if (!req.file) {
+        return res.status(400).json({ message: "Rasm yuklanmadi, iltimos rasmni yuklang!" });
+      }
+      const imgUrl = `${req.protocol}://${req.get("host")}/${req.file.filename}`;
+      const author = await AuthorsModel.findByIdAndUpdate(authorId, {
+        img: imgUrl,
+      });
+      if (!author) {
+        return res.status(404).json({ message: "Adib topilmadi!" });
+      }
+      res.status(200).json({
+        message: "Rasm muvaffaqiyatli yuklandi!",
+        img: {
+          fileName: req.file.filename,
+          link: imgUrl,
+        },
+      });
+    });
+  } catch (error) {
+    next(error);
+  }
+}
+
+module.exports = {
+  uploadBookImage,
+  uploadAuthorImage
+}
